--- a/src/styles/acerca.css
+++ b/src/styles/acerca.css
@@ -1,7 +1,46 @@
+.containerHeader{
+    position: relative;
+    width: 100%;
+}
+
 .header{
+    padding: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.menu-navegacion{
+    background-image: linear-gradient(to right, rgb(79, 172, 254, 0.6) 0%, rgb(0, 242, 254, 0.6) 100%);
+    position: fixed;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    transition: top 0.8s ease-out;
+}
+
+.link{
+    color: #eee;
+    text-decoration: none;
+}
+
+.header_buttom{
     width: 80%;
     text-align: center;
     position: static;
+}
+
+.img_carousel{
+    width: 100%;
+    height: 100vh;
 }
 
 .datos{
