--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -67,3 +67,20 @@
     color: #292929;
     background-color: #fff;
 }
+
+.contact{
+    text-align: center;
+    font-family: sans-serif;
+    background-color: #fff;
+    padding: 5px;
+}
+
+.contact > h3{
+    font-size: 0.8rem;
+    margin-bottom: 8px;
+}
+
+.autor > a{
+    text-decoration: none;
+    color: #4c007d;
+}
